--- a/style.sty
+++ b/style.sty
@@ -2,6 +2,7 @@
 \usepackage{titling}
 \usepackage{multicol}
 \usepackage{hyperref}
+\usepackage{graphicx}
 
 \setlength{\droptitle}{-5em}
 \setlength{\parindent}{0pt}
