moving precalc into main notes

--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -46,6 +46,8 @@ Some departures from the structure of Spivak's text:
 \tableofcontents
 
 \clearpage
+\input{prereqs.tex}
+\clearpage
 \input{limits.tex}
 \clearpage
 \input{limits2.tex}
