more on inequalities

--- a/notes/prereqs.tex
+++ b/notes/prereqs.tex
@@ -41,7 +41,13 @@ confusing you brings them pleasure.
 
 The right side is $|x-a|<\delta$. Intuitively this says that the difference
 between $x$ and $a$ should be less than $\delta$. Put differently, $x$
-should be within $\delta$ of $a$. We can rewrite this as $a-\delta<x<a+\delta$.
+should be within $\delta$ of $a$. Algebraically we can write it as two
+cases:
+\begin{enumerate}
+\item $x-a<\delta$
+\item $-(x-a)<\delta$
+\end{enumerate}
+A little basic manipulation, and we can rewrite this as $a-\delta<x<a+\delta$.
 
 \subsubsection*{Bounding}
 We will often need to make an inequality of the following form work out:
