--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -20,6 +20,9 @@ properly understand the damned thing.
 
 Some departures from the structure of Spivak's text:
 \begin{itemize}
+\item The very first chapter in these notes is a grab bag of
+  prerequisites-- some basic math I had to learn as I go that I
+  ``should have already known''.
 \item In general each chapter in Spivak weaves between introducing
   concepts, exploring degenerate cases, showing examples of practice
   problems, and proving theorems. In my view this is delightful if you
