--- a/notes/derivatives2.tex
+++ b/notes/derivatives2.tex
@@ -439,7 +439,7 @@ $f_{i+1}(\dots f_n(x) \dots)$. Then:
 \textbf{Proof.} This is a fairly straightforward proof by induction.
 Skipping it here as I've already spent enough time on this chapter.
 
-\subsection{Derivatives polynomials}
+\subsection{Derivatives of polynomials}
 We can easily find derivatives of polynomials using theorems 1-6. It
 turns out to be an interesting enough form that it's worth mentioning
 explicitly. Consider
