--- a/hw/ch10.tex
+++ b/hw/ch10.tex
@@ -8,9 +8,14 @@ Find $f'(x)$.
 
 (i) $f(x)=\sin((x+1)^2(x+2))$
 
+\[f'(x)=\cos((x+1)^2(x+2))\cdot(2(x+1)(x+2)+(x+1)^2)\]
+
 \vs
 
 (iv) $f(x)=\sin\left(\frac{x^3}{\cos x^3}\right)$
+
+\[\cos\left(\frac{x^3}{\cos x^3}\right)\cdot \frac{3x^2(\cos x^3+x^3\cdot \sin
+    x^3)}{\cos^2 x^3}\]
 
 
 \subsection*{Problem 4}
@@ -20,12 +25,19 @@ Find $f'(f(x))$ (\textit{not} $(f\circ f)'(x)$).
 
 (i) $f(x)=\frac{1}{1+x}$
 
+\[f'(x)=-\frac{1}{(1+x)^2}\]
+
+Thus
+\[f'(f(x))=-\frac{1}{(1+\frac{1}{1+x})^2}=-\left(\frac{1+x}{2+x}\right)^2\]
+
 \subsection*{Problem 6}
 Find $f'$ in therms of $g'$ if
 
 \vs
 
 (iii) $f(x)=g(x+g(x))$
+
+\[f'(x)=g'(x+g(x))\cdot (1+g'(x))\]
 
 \subsection*{Problem 8}
 The area between two varying concentric circles is at all times $9\pi$
