--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -1,4 +1,4 @@
-\section{Limits, Part I (Blessed Path)}
+\section{Limits, Part II (Blessed Path)}
 
 \subsection{Formal limits definition}
 
@@ -101,7 +101,7 @@ $g(x)\geq -M/2$. We will show $g(x)\leq M/2$. Fix $\epsilon=-M/2$. Then
 \end{align*}
 QED.
 
-\subsection{Theorems that make evaluation work}
+\subsection{Evaluation mechanics proofs}
 
 Armed with the formal definition, we can use it to rigorously prove
 the five theorems useful for evaluating limits (constants, identity,
