--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -20,9 +20,9 @@ properly understand the damned thing.
 
 Some departures from the structure of Spivak's text:
 \begin{itemize}
-\item The very first chapter in these notes is a grab bag of
-  prerequisites-- some basic math I had to learn as I go that I
-  ``should have already known''.
+\item The very first chapter in these notes covers prerequisites
+  necessary to study limits-- some really basic limits intuitions, and
+  material on bounding values with inequalities.
 \item In general each chapter in Spivak weaves between introducing
   concepts, exploring degenerate cases, showing examples of practice
   problems, and proving theorems. In my view this is delightful if you
@@ -43,13 +43,18 @@ Some departures from the structure of Spivak's text:
   I then introduce and prove IVT and EVT, and finally cover their
   consequences. IMO this approach is much less confusing than
   Spivak's.
+\item Spivak covers variations of trigonometric functions as he goes
+  through the book. In the early chapters I found it distracting as I
+  didn't know any trig. I eventually buckled down and learned enough,
+  and then revisited everything I skipped. I go through this exercise
+  in chapter 9 of these notes.
 \end{itemize}
 
 \clearpage
 \tableofcontents
 
 \clearpage
-\input{prereqs.tex}
+\input{limits0.tex}
 \clearpage
 \input{limits.tex}
 \clearpage
@@ -64,6 +69,8 @@ Some departures from the structure of Spivak's text:
 \input{derivatives.tex}
 \clearpage
 \input{derivatives2.tex}
+\clearpage
+\input{trig.tex}
 \clearpage
 \input{derivatives3.tex}
 
