--- a/notes/derivatives2.tex
+++ b/notes/derivatives2.tex
@@ -473,9 +473,12 @@ differentiation theorems proved above:
 \item $(f\circ g)'(a)=f'(g(a))\cdot g'(a)$.
 \end{enumerate}
 
-Second, two trig derivatives presented without proof (proper proofs
-will show up in a later chapter when $\sin$ and $\cos$ are properly
-defined):
+Spivak deals with a lot of trig here, and we will too. However, in
+this chapter we can treat $\sin$ and $\cos$ as black boxes. In the
+next chapter we'll look at trig functions in more detail. For now, all
+we need to know is the two trig derivatives presented below without
+proof (proper proofs will show up in an even later chapter when $\sin$
+and $\cos$ are formally defined):
 \begin{align*}
   \sin'(a)&=\cos a\\
   \cos'(a)&=-\sin a
