--- a/notes/trig.tex
+++ b/notes/trig.tex
@@ -58,8 +58,142 @@ double the frequency with $c=2$:
 
 \clearpage
 \subsection{Limits}
+
+\textbf{Claim 1:} $\lim_{x\to0}x\sin \frac{1}{x}=0$.
+
+\textbf{Proof.}
+
+\vs---\vs
+
+\textbf{Claim 2:} $\lim_{x\to0}x^2\sin \frac{1}{x}=0$.
+
+\textbf{Proof.}
+
+\vs---\vs
+
+\textbf{Claim 3:} $\lim_{x\to0}\sqrt{x}\sin \frac{1}{x}=0$.
+
+\textbf{Proof.}
+
+\vs---\vs
+
+\textbf{Claim 4:} $\lim_{x\to0}\sin \frac{1}{x}$ does not exist.
+
+\textbf{Proof.}
+
+\vs---\vs
+
+\textbf{Claim 5:} $\lim_{x\to\infty}\sin \frac{1}{x}=0$.
+
+\textbf{Proof.}
+
 \subsection{Continuity}
+
+\textbf{Claim 1:} $f(x)=\sin \frac{1}{x}$, $g(x)=x\sin \frac{1}{x}$ are not continuous at $0$.
+
+\textbf{Proof.}
+
+\vs---\vs
+
+\textbf{Claim 2:} Let
+\[G(x)=\begin{cases}
+  x\sin \frac{1}{x},&x\neq0\\
+  0,&x=0
+\end{cases}\]
+Then $G$ is continuous at $0$.
+
+\vs
+
+\textbf{Proof.}
+
+\vs---\vs
+
+\textbf{Claim 3:} Let
+\[F(x)=\begin{cases}
+  \sin \frac{1}{x},&x\neq0\\
+  a,&x=0
+\end{cases}\]
+Then $F$ is \textit{not} continuous at $0$, for any choice of $a$.
+
+\vs
+
+\textbf{Proof.}
+
+\vs---\vs
+
+\textbf{Claim 4:} Let
+\[f(x)=\begin{cases}
+  x\sin \frac{1}{x},&x\neq0\\
+  0,&x=0
+\end{cases}\]
+Then $f$ is continuous at $a$ for $a\neq 0$.
+
+\vs
+
+\textbf{Proof.}
+
+
 \subsection{Derivatives}
+
+\textbf{Claim 1:} Let
+\[f(x)=\begin{cases}
+  x\sin \frac{1}{x},&x\neq0\\
+  0,&x=0
+\end{cases}\]
+Then $f$ is not differentiable at $0$.
+
+\vs
+
+\textbf{Proof.}
+
+\vs---\vs
+
+\textbf{Claim 2:} Let
+\[g(x)=\begin{cases}
+  x^2\sin \frac{1}{x},&x\neq0\\
+  0,&x=0
+\end{cases}\]
+Then $g$ is differentiable at $0$.
+
+\vs
+
+\textbf{Proof.}
+
+\subsection{Differentiation}
+
+\textbf{Claim 1:} $g'$ is not differentiable at $0$.
+
+\textbf{Proof.}
+
+\vs---\vs
+
+\textbf{Claim 2:} Let
+\[f(x)=\begin{cases}
+  x^3\sin \frac{1}{x},&x\neq0\\
+  0,&x=0
+\end{cases}\]
+Then $f'$ is not differentiable at $0$.
+
+\vs
+
+\textbf{Proof.}
+
+\vs---\vs
+
+\textbf{Claim 3:} Let
+\[f(x)=\begin{cases}
+  x^4\sin \frac{1}{x},&x\neq0\\
+  0,&x=0
+\end{cases}\]
+Then $f''$ is not differentiable at $0$.
+
+\vs
+
+\textbf{Proof.}
+
+\vs
+
+\textbf{TODO more stuff on pp 178}
 
 %%% Local Variables:
 %%% TeX-master: "notes"
